--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
         </div>  
 
-        <div>
+        <div class="button-container">
           
           <button type="submit">Submit</button>
           <button type="reset">Reset</button>
